--- a/about/privacy.html
+++ b/about/privacy.html
@@ -49,37 +49,37 @@
 				</a>
 							</li>
 								<li class="">
-				<a href="../issue/archive">
+				<a href="../issue/archive.html">
 					Arquivos
 				</a>
 							</li>
 								<li class="">
-				<a href="../announcement">
+				<a href="../announcement.html">
 					Notícias
 				</a>
 							</li>
 								<li class="">
-				<a href="../about">
+				<a href="../about.html">
 					Sobre
 				</a>
 									<ul>
 																					<li class="">
-									<a href="../about">
+									<a href="../about.html">
 										Sobre a Revista
 									</a>
 								</li>
 																												<li class="">
-									<a href="../about/editorialTeam">
+									<a href="../about/editorialTeam.html">
 										Equipe Editorial
 									</a>
 								</li>
 																												<li class="">
-									<a href="../ficha">
+									<a href="../ficha.html">
 										Ficha Catalográfica
 									</a>
 								</li>
 																												<li class="">
-									<a href="../about/contact">
+									<a href="../about/contact.html">
 										Contato
 									</a>
 								</li>
@@ -89,14 +89,14 @@
 									</a>
 								</li>
 																												<li class="">
-									<a href="../about/privacy">
+									<a href="../about/privacy.html">
 										Declaração de Privacidade
 									</a>
 								</li>
 																		</ul>
 							</li>
 								<li class="">
-				<a href="../infos">
+				<a href="../infos.html">
 					Informações
 				</a>
 							</li>
@@ -104,7 +104,7 @@
 
 				
 
-																								<form class="pkp_search" action="../search/search" method="post" role="search">
+																								<form class="pkp_search" action="../search/search.html" method="post" role="search">
 		<input type="hidden" name="csrfToken" value="87df412b5cf27b6bd37dd314dc223106">
 		
 			<input name="query" value="" type="text" aria-label="Termo de Busca">
@@ -114,7 +114,7 @@
 			Buscar
 		</button>
 		<div class="search_controls" aria-hidden="true">
-			<a href="../search/search" class="headerSearchPrompt search_prompt" aria-hidden="true">
+			<a href="../search/search.html" class="headerSearchPrompt search_prompt" aria-hidden="true">
 				Buscar
 			</a>
 			<a href="#" class="search_cancel headerSearchCancel" aria-hidden="true"></a>
@@ -127,7 +127,7 @@
 				<nav class="pkp_navigation_user_wrapper" id="navigationUserWrapper" aria-label="Navegação do Usuário">
 						<ul id="navigationUser" class="pkp_navigation_user pkp_nav_list">
 																						<li class="profile">
-				<a href="../submissions">
+				<a href="../submissions.html">
 					3142936
 <span class="task_count">
 	9
@@ -136,7 +136,7 @@
 				</a>
 									<ul>
 																					<li class="profile">
-									<a href="../submissions">
+									<a href="../submissions.html">
 										Painel de Controle
 <span class="task_count">
 	9
@@ -145,12 +145,12 @@
 									</a>
 								</li>
 																												<li class="profile">
-									<a href="../user/profile">
+									<a href="../user/profile.html">
 										Perfil
 									</a>
 								</li>
 																																									<li class="profile">
-									<a href="../login/signOut">
+									<a href="../login/signOut.html">
 										Sair do sistema
 									</a>
 								</li>
