--- a/arf.html
+++ b/arf.html
@@ -84,7 +84,7 @@
 									</a>
 								</li>
 																												<li class="">
-									<a href="./about/submissions.html.html">
+									<a href="./about/submissions.html">
 										Submissões
 									</a>
 								</li>
