--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
  <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#011cc2" />
 
-  <title>React App</title>
+  <title>Aufklärung - Revista de Filosofia</title>
  </head>
  <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
