--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#011cc2" />
+
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-chrome-192x192.png" />
+  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5" />
+  <link rel="manifest" href="site.webmanifest" />
+  <meta name="apple-mobile-web-app-title" content="Aufklärung" />
+  <meta name="application-name" content="Aufklärung" />
+  <meta name="msapplication-TileColor" content="#238b89" />
+  <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
+  <meta name="theme-color" content="#fff" />
 
   <title>Aufklärung - Revista de Filosofia</title>
  </head>
