Moved browserconfig.xml

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <link rel="manifest" href="site.webmanifest" />
   <meta name="apple-mobile-web-app-title" content="Aufklärung" />
   <meta name="application-name" content="Aufklärung" />
+  <meta name="msapplication-config" content="browserconfig.xml" />
   <meta name="msapplication-TileColor" content="#238b89" />
   <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
   <meta name="theme-color" content="#fff" />
